[Fix] Masonry RWD layout bug and search card position bug

--- a/src/stylesheets/components/_search.scss
+++ b/src/stylesheets/components/_search.scss
@@ -1,51 +1,38 @@
 @import "helpers/mixins";
 @import "helpers/placeholders";
+@import "helpers/variables";
 
 @import "components/card";
 
 .search {
-    @extend %closer;
     @extend %fixed;
     @extend %bottom;
-    width: $grid-item_width;
-    height: 90px;
-    @media screen and (max-width: 1070px) { // 2 columns
-        margin-right: 86px;
-    }
-    @media screen and (min-width: 1071px) and (max-width: 1320px) { // 3 columns
-        margin-right: 68px;
-    }
-    @media screen and (min-width: 1321px) and (max-width: 1600px) { // 4 columns
-        margin-right: 50px;
-    }
-    @media screen and (min-width: 1601px) and (max-width: 1920px) {  // 5 columns
-        margin-right: 32px;
-    }
-    @media screen and (min-width: 1921px) {  // 6 columns
-        margin-right: 14px;
-    }
 }
-    .search-icon {
-        display: inline-block;
-        width: 20%;
-        @extend %as_tall_as_parent;
-        @extend %text_center;
-        vertical-align: top;
-        @extend %relative;
+    .search-card {
+        @extend .card;
+        width: $grid-item_width - 2 * $card_padding;
     }
-        .search-icon__icon {
-            height: 50px;
-            @include background_img_content(auto_start_icon);
-            @extend %background_img_setting;
+        .search-icon {
+            display: inline-block;
+            width: 20%;
+            @extend %as_tall_as_parent;
+            @extend %text_center;
+            vertical-align: top;
+            @extend %relative;
         }
-    .search-text {
-        @extend .search-icon;
-        width: 80%;
-    }
-        .search-text__title {
-            @extend %as_wide_as_parent;
-        }
-        .search-text__textfield {
+            .search-icon__icon {
+                height: 50px;
+                @include background_img_content(auto_start_icon);
+                @extend %background_img_setting;
+            }
+        .search-text {
+            @extend .search-icon;
             width: 80%;
-            background-color: $gray;
         }
+            .search-text__title {
+                @extend %as_wide_as_parent;
+            }
+            .search-text__textfield {
+                width: 80%;
+                background-color: $gray;
+            }
