--- a/src/stylesheets/layout/_main-container.scss
+++ b/src/stylesheets/layout/_main-container.scss
@@ -5,5 +5,6 @@
     @extend %absolute;
     @extend %header_height_offset;
     right: $g_right-sidebar_width;
+    width: calc(100% - #{$g_right-sidebar_width});
     padding-top: 14px;
 }
